--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Load the external quiz data (allQuizData and quizTitle) before the logic script -->
-    <script src="https://aa3025.github.io/quiz5.js"></script>
-
+   <script src="https://aa3025.github.io/leon/quiz1.js"></script>
+    
     <!-- Load MathJax for correct LaTeX rendering -->
     <script type="text/javascript" id="MathJax-script" async
         src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
