--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Load the external quiz data (allQuizData and quizTitle) before the logic script -->
-   <script src="https://aa3025.github.io/leon/quiz1.js"></script>
+   <script src="https://aa3025.github.io/leon1.js"></script>
      
     <!-- Load MathJax for correct LaTeX rendering -->
     <script type="text/javascript" id="MathJax-script" async
