Add option for 25 questions in quiz selection

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                     <option value="5" selected>5 Questions</option>
                     <option value="10">10 Questions</option>
                     <option value="15">15 Questions (All)</option>
+                    <option value="25">25 Questions (All)</option?
                 </select>
             </div>
         </div>
