--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <select id="question-count" onchange="loadNewQuizSet(this.value)" class="p-1 border border-gray-300 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 text-base">
                     <option value="5" selected>5 Questions</option>
                     <option value="10">10 Questions</option>
-                    <option value="15">15 Questions (All)</option>
-                    <option value="25">25 Questions (All)</option?
+                    <option value="15">15 Questions </option>
+                    <option value="25">25 Questions (All)</option>
                 </select>
             </div>
         </div>
