--- a/quizgen/index.html
+++ b/quizgen/index.html
@@ -345,7 +345,8 @@
             - Ensure all strings, including question and explanation content, use proper HTML tags for bolding (<b>) and line breaks (<br>) instead of markdown/asterisks.
             - The 'explanation' field MUST start with 'Rationale: <br>' and clearly justify why each option (A, B, C, etc.) is correct or incorrect.
             - The correct options in the 'correct' array must be the 0-based index of the 'options' array.
-            - The 'options' array must contain at 4-6 distinct options.
+            - The 'options' array must contain at 5-6 distinct options.
+            - Make sure that there are at least 2 incorrect options,
             - The 'id' must be unique sequential numbers starting from 1.
             - All the LaTeX formatting for mathematics must be correctly formatted for MathJaX rendering: do not use $ ... $ for mathematics (at all), instead use \\( ... \\) for MathJax maths.`;
             
