Update footer year and add creator credit
Updated footer text to reflect the new year and added creator credit.

--- a/graphs/graphs5.html
+++ b/graphs/graphs5.html
@@ -385,7 +385,7 @@
         </div>
         
         <footer>
-            <p>Graph Theory Visualizer &copy; 2023 | Interactive Graph Analysis Tool</p>
+            <p>Graph Theory Visualizer &copy; 2025 | Interactive Graph Analysis Tool | Created by Alex P. using DeepSeek AI</p>
         </footer>
     </div>
 
