--- a/graphs/graphs5.html
+++ b/graphs/graphs5.html
@@ -16,12 +16,14 @@
         
         <div class="main-content">
             <div class="graph-section">
+                <p> Click and drag the nodes to rearrange them</p>
                 <div class="canvas-container">
                     <canvas id="graphCanvas" width="940" height="768"></canvas>
                 </div>
                 
                 <div class="matrix-section">
-                    <h2>Adjacency Matrix</h2>
+                    <h2>Adjacency Matrix</h2> 
+                    <p>Click on the entries to change their values (connections)</p>
                     <div id="matrixDisplay"></div>
                 </div>
             </div>
