--- a/graphs/DFS_on_a_grid_graph.html
+++ b/graphs/DFS_on_a_grid_graph.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DFS Grid Visualization (21x21)</title>
+    <title>DFS Grid Visualization (21x21) [pre-order approach] </title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
