--- a/graphs/DFS_on_a_grid_graph.html
+++ b/graphs/DFS_on_a_grid_graph.html
@@ -37,7 +37,7 @@
 
     <div class="w-full max-w-4xl bg-white rounded-lg p-6">
         <h1 class="text-3xl font-bold text-center text-gray-800 mb-6">
-            DFS Grid Visualization (21x21)
+            DFS Preorder Grid Visualization (21x21)
         </h1>
         
         <!-- Main container - Vertical layout -->
