Replace lj_lite.js with lj.js in index.html

--- a/LJ/index.html
+++ b/LJ/index.html
@@ -38,7 +38,7 @@ slider.oninput = function() {
 }
 </script>
 
-<script src="lj_lite.js"></script>
+<script src="lj.js"></script>
 
 </body>
 </html>
