--- a/n-body/rk4.html
+++ b/n-body/rk4.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<h2>JavaScript Gravitational N-body Simulation using Leapfrog DKD method</h2>
+<h2>JavaScript Gravitational N-body Simulation using Runge-Kutta 4th order method</h2>
   <div style="width:600px; height:20px;"><p align="right"><i>Alex Pedcenko 2020</i></p></div>
 
 <div style="width:600px;border:1px solid #cccccc"><p align="left">
