Improve in-order traversal description in HTML
Enhanced the explanation of the in-order traversal, emphasizing the role of the 'current' node as an explorer.

--- a/graphs/DFS_pre_in_post_on_a_tree.html
+++ b/graphs/DFS_pre_in_post_on_a_tree.html
@@ -239,7 +239,7 @@
                 `,
                 inorder: `
                     <h3 class="font-semibold mb-1">In-order (LDR: Left-Data-Right)</h3>
-                    <p>Nodes are added to the output <strong class="text-blue-700">after their left subtree is fully explored.</strong> This visits nodes in ascending order in a Binary Search Tree.</p>
+                    <p>Nodes are added to the output <strong class="text-blue-700">after their left subtree is fully explored.</strong> The <strong class="text-yellow-700">'current'</strong> node (also yellow) acts as an "explorer" that travels as far left as possible before any node is popped to be visited.</p>
                 `,
                 postorder: `
                     <h3 class="font-semibold mb-1">Post-order (LRD: Left-Right-Data)</h3>
