Update description for node pop operation

--- a/graphs/DFS_pre_in_post_on_a_tree.html
+++ b/graphs/DFS_pre_in_post_on_a_tree.html
@@ -378,7 +378,7 @@
                         visited: visited,
                         output: [...output],
                         current: node.id, // Show popped node as "current"
-                        description: `Pop "${node.id}", add to output. Set current to right child.`
+                        description: `Pop "${node.id}", add to output. Set current to right child of "${node.id}".`
                     });
 
                     // Phase 3: Go right
