Change 'Visualizer' to 'Visualiser' in HTML

--- a/graphs/DFS_pre_in_post_on_a_tree.html
+++ b/graphs/DFS_pre_in_post_on_a_tree.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DFS Traversal Visualizer</title>
+    <title>DFS Traversal Visualiser</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
@@ -52,7 +52,7 @@
     <div class="w-full max-w-5xl flex flex-col">
 
         <header class="mb-6">
-            <h1 class="text-3xl font-bold text-center text-gray-800">DFS Traversal Visualizer</h1>
+            <h1 class="text-3xl font-bold text-center text-gray-800">DFS Traversal Visualiser</h1>
         </header>
 
         <!-- Dynamic Explanation Box -->
