--- a/sorting/bubblesort.html
+++ b/sorting/bubblesort.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bubble Sort Visualiser</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    /* <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"> */
+    <link href="style_b.css" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -766,3 +767,4 @@
     </script>
 </body>
 </html>
+
