Update Marking Scheme link formatting in HTML

--- a/ai_marker/index.html
+++ b/ai_marker/index.html
@@ -249,7 +249,7 @@
                     <!-- Marking Scheme Loader -->
                     <div class="lg:col-span-1 space-y-2">
                         <label class="block text-sm font-medium text-gray-700 flex justify-between">
-                            <span>3. Marking Scheme (TXT) <a href="https://aa3025.github.io/ai_marker/marking_scheme_example.md">Example MS</a></span>
+                            <span>3. Marking Scheme (TXT) <a href="https://aa3025.github.io/ai_marker/marking_scheme_example.md"><underline><Example MS</underline></a></span>
                             <button onclick="app.toggleSchemeEditor()" class="text-xs text-blue-600 hover:underline">Edit</button>
                         </label>
                         <div class="drop-zone border-dashed border-2 border-gray-300 rounded-xl p-6 text-center bg-white cursor-pointer hover:border-emerald-500 hover:bg-emerald-50 transition-colors h-32 flex flex-col justify-center items-center relative" id="drop-scheme">
