Add example script link to student scripts label

--- a/ai_marker/index.html
+++ b/ai_marker/index.html
@@ -226,7 +226,7 @@
                     
                     <!-- Scripts Loader -->
                     <div class="lg:col-span-1 space-y-2">
-                        <label class="block text-sm font-medium text-gray-700">1. Student Scripts (PDF)</label>
+                        <label class="block text-sm font-medium text-gray-700">1. Student Scripts (PDF) <span> <a href="https://aa3025.github.io/ai_marker/Student_1234567_example.pdf" target="_blank" style="text-decoration: underline;">Example Script</a></span></label>
                         <div class="drop-zone border-dashed border-2 border-gray-300 rounded-xl p-6 text-center bg-white cursor-pointer hover:border-blue-500 hover:bg-blue-50 transition-colors h-32 flex flex-col justify-center items-center relative" id="drop-scripts">
                             <input type="file" multiple accept="application/pdf" class="absolute inset-0 w-full h-full opacity-0 cursor-pointer" onchange="app.handleFiles(this.files, 'script')">
                             <i data-lucide="upload-cloud" class="w-8 h-8 text-gray-400 mb-2"></i>
