Obscure model name in index.html

--- a/ai_marker/index.html
+++ b/ai_marker/index.html
@@ -1396,7 +1396,7 @@ You MUST return ONLY valid JSON with this exact structure (no markdown):
                 <div><strong>Date Marked:</strong> ${dateStr}</div>
                 <div><strong>Marker:</strong> ${mi.name} ${mi.title ? `(${mi.title})` : ''}</div>
                 <div><strong>Institution:</strong> ${mi.institution || 'N/A'}</div>
-                <div><strong>Model:</strong> ${modelName}</div>
+                <div><strong>Model:</strong> ........</div> 
             </div>
         </header>
 
