Update attribution context to use 'computer intelligence'

--- a/ai_marker/index.html
+++ b/ai_marker/index.html
@@ -729,8 +729,8 @@ You MUST return ONLY valid JSON with this exact structure:
                 } else {
                     // MARKING PROMPT (Standard)
                     const attributionContext = appState.markerInfo.attribution 
-                        ? `IMPORTANT: In the overall_feedback field, you MUST start with exactly: "This assignment has been marked by ${appState.markerInfo.name} with the assistance of AI."` 
-                        : `IMPORTANT: In the overall_feedback field, start with: "This assignment has been marked with AI assistance."`;
+                        ? `IMPORTANT: In the overall_feedback field, you MUST start with exactly: "This assignment has been marked by ${appState.markerInfo.name} with the assistance of computer intelligence."` 
+                        : `IMPORTANT: In the overall_feedback field, start with: "This assignment has been marked with computer intelligence."`;
 
                     const strictnessInstruction = `
 MARKING GUIDELINES (CRITICAL):
