--- a/n-body/index.html
+++ b/n-body/index.html
@@ -207,7 +207,7 @@
         </div>
     </div>
 
-    <div id="ui-hint">N-body Simulation • Mouse Wheel to Zoom</div>
+    <div id="ui-hint">N-body Simulation • Scroll or Pinch to Zoom</div>
 
     <canvas id="mandalaCanvas"></canvas>
 
@@ -249,7 +249,7 @@
             tadpoleSpeedScale: 400,   
             particleSize: 7,
             glowSize: 25,           
-            zoom: 1.0, // Default zoom factor set to 1.0
+            zoom: 1.0,
             damping: 1.0,           
             r0: 180,                
             virialK: 0.5,           
@@ -265,6 +265,10 @@
         let frameCount = 0;
         let lastFpsUpdate = 0;
         let simulationTime = 0;
+
+        // Pinch Zoom State
+        let initialPinchDist = null;
+        let initialZoomOnPinch = 1.0;
 
         class Body {
             constructor(x, y, vx, vy, hue) {
@@ -504,6 +508,9 @@
             config.initialEnergy = total;
         }
 
+        // --- INTERACTION HANDLERS ---
+
+        // Mouse Wheel Zoom
         window.addEventListener('wheel', (e) => {
             if (e.target.tagName !== 'INPUT' && e.target.tagName !== 'SELECT') {
                 e.preventDefault();
@@ -513,6 +520,39 @@
             }
         }, { passive: false });
 
+        // Touch Pinch Zoom
+        window.addEventListener('touchstart', (e) => {
+            if (e.touches.length === 2) {
+                const dx = e.touches[0].pageX - e.touches[1].pageX;
+                const dy = e.touches[0].pageY - e.touches[1].pageY;
+                initialPinchDist = Math.sqrt(dx * dx + dy * dy);
+                initialZoomOnPinch = config.zoom;
+            }
+        }, { passive: false });
+
+        window.addEventListener('touchmove', (e) => {
+            if (e.touches.length === 2 && initialPinchDist !== null) {
+                e.preventDefault();
+                const dx = e.touches[0].pageX - e.touches[1].pageX;
+                const dy = e.touches[0].pageY - e.touches[1].pageY;
+                const currentDist = Math.sqrt(dx * dx + dy * dy);
+                
+                if (initialPinchDist > 0) {
+                    const ratio = currentDist / initialPinchDist;
+                    config.zoom = initialZoomOnPinch * ratio;
+                    // Clamp
+                    config.zoom = Math.min(Math.max(config.zoom, 0.0001), 100);
+                }
+            }
+        }, { passive: false });
+
+        window.addEventListener('touchend', (e) => {
+            if (e.touches.length < 2) {
+                initialPinchDist = null;
+            }
+        });
+
+        // UI Listeners
         schemeSelector.addEventListener('change', initSimulation);
         [numBodiesInput, virialKInput].forEach(input => {
             input.addEventListener('change', initSimulation);
